# poly_bridge_water_simulation

./: .gitignore  CMakeLists.txt  README.md
include/: mesh.h  shader.h
src/: main.cpp  mesh.cpp
src/shaders/: water.frag  water.vert
